@@ -14,7 +14,7 @@
 #include <vlad/kb.h>
 
 /* create a kb */
-VLAD_EXTERN int kb_create(void **a_kb)
+VLAD_EXTERN int vlad_kb_create(void **a_kb)
 {
   kb *tmp_kb = NULL;
 
@@ -30,7 +30,7 @@ VLAD_EXTERN int kb_create(void **a_kb)
 }
 
 /* destroy a kb */
-VLAD_EXTERN int kb_destroy(void *a_kb)
+VLAD_EXTERN int vlad_kb_destroy(void *a_kb)
 {
   kb *tmp_kb = NULL;
 
@@ -46,7 +46,7 @@ VLAD_EXTERN int kb_destroy(void *a_kb)
 }
 
 /* (re)init a kb */
-VLAD_EXTERN int kb_init(void *a_kb)
+VLAD_EXTERN int vlad_kb_init(void *a_kb)
 {
   kb *tmp_kb = NULL;
 
@@ -60,7 +60,7 @@ VLAD_EXTERN int kb_init(void *a_kb)
 }
 
 /* close symbol table */
-VLAD_EXTERN int kb_close_symtab(void *a_kb)
+VLAD_EXTERN int vlad_kb_close_symtab(void *a_kb)
 {
   kb *tmp_kb = NULL;
 
@@ -74,7 +74,7 @@ VLAD_EXTERN int kb_close_symtab(void *a_kb)
 }
 
 /* close kb table */
-VLAD_EXTERN int kb_close_kb(void *a_kb)
+VLAD_EXTERN int vlad_kb_close_kb(void *a_kb)
 {
   kb *tmp_kb = NULL;
 
@@ -88,7 +88,9 @@ VLAD_EXTERN int kb_close_kb(void *a_kb)
 }
 
 /* register an identifier in the kb */
-VLAD_EXTERN int kb_add_symtab(void *a_kb, const char *a_n, unsigned char a_t)
+VLAD_EXTERN int vlad_kb_add_symtab(void *a_kb,
+                                   const char *a_n,
+                                   unsigned char a_t)
 {
   kb *tmp_kb = NULL;
 
@@ -102,7 +104,7 @@ VLAD_EXTERN int kb_add_symtab(void *a_kb, const char *a_n, unsigned char a_t)
 }
 
 /* add an atom into the initial state table */
-VLAD_EXTERN int kb_add_inittab(void *a_kb, void *a_atm)
+VLAD_EXTERN int vlad_kb_add_inittab(void *a_kb, void *a_atm)
 {
   kb *tmp_kb = NULL;
   atom *tmp_atm = NULL;
@@ -119,7 +121,10 @@ VLAD_EXTERN int kb_add_inittab(void *a_kb, void *a_atm)
 }
 
 /* add an expression into the constraints table */
-VLAD_EXTERN int kb_add_consttab(void *a_kb, void *a_e, void *a_c, void *a_n)
+VLAD_EXTERN int vlad_kb_add_consttab(void *a_kb,
+                                     void *a_e,
+                                     void *a_c,
+                                     void *a_n)
 {
   kb *tmp_kb = NULL;
   expression *tmp_e = NULL;
@@ -140,7 +145,11 @@ VLAD_EXTERN int kb_add_consttab(void *a_kb, void *a_e, void *a_c, void *a_n)
 }
 
 /* add a transformation declaration in the trans table */
-VLAD_EXTERN int kb_add_transtab(void *a_kb, const char *a_n, void *a_v, void *a_pr, void *a_po)
+VLAD_EXTERN int vlad_kb_add_transtab(void *a_kb,
+                                     const char *a_n,
+                                     void *a_v,
+                                     void *a_pr,
+                                     void *a_po)
 {
   kb *tmp_kb = NULL;
   stringlist *tmp_v = NULL;
@@ -161,7 +170,7 @@ VLAD_EXTERN int kb_add_transtab(void *a_kb, const char *a_n, void *a_v, void *a_
 }
 
 /* add a transformation reference to the sequence table */
-VLAD_EXTERN int kb_add_seqtab(void *a_kb, void *a_tr)
+VLAD_EXTERN int vlad_kb_add_seqtab(void *a_kb, void *a_tr)
 {
   kb *tmp_kb = NULL;
   transref *tmp_tr = NULL;
@@ -178,7 +187,7 @@ VLAD_EXTERN int kb_add_seqtab(void *a_kb, void *a_tr)
 }
 
 /* delete a transformation reference from the sequence table */
-VLAD_EXTERN int kb_del_seqtab(void *a_kb, unsigned int a_i)
+VLAD_EXTERN int vlad_kb_del_seqtab(void *a_kb, unsigned int a_i)
 {
   kb *tmp_kb = NULL;
 
@@ -192,7 +201,7 @@ VLAD_EXTERN int kb_del_seqtab(void *a_kb, unsigned int a_i)
 }
 
 /* enumerate the sequences in the sequence table, output to f */
-VLAD_EXTERN int kb_list_seqtab(void *a_kb, FILE *a_fs)
+VLAD_EXTERN int vlad_kb_list_seqtab(void *a_kb, FILE *a_fs)
 {
   kb *tmp_kb = NULL;
 
@@ -206,7 +215,7 @@ VLAD_EXTERN int kb_list_seqtab(void *a_kb, FILE *a_fs)
 }
 
 /* generate the rules necessary to evaluate queries */
-VLAD_EXTERN int kb_compute_generate(void *a_kb, FILE *a_fs)
+VLAD_EXTERN int vlad_kb_compute_generate(void *a_kb, FILE *a_fs)
 {
   kb *tmp_kb = NULL;
 
@@ -220,7 +229,7 @@ VLAD_EXTERN int kb_compute_generate(void *a_kb, FILE *a_fs)
 }
 
 /* generate the query */
-VLAD_EXTERN int kb_query_generate(void *a_kb, void *a_exp, FILE *a_fs)
+VLAD_EXTERN int vlad_kb_query_generate(void *a_kb, void *a_exp, FILE *a_fs)
 {
   kb *tmp_kb = NULL;
   expression *tmp_exp = NULL;
@@ -237,7 +246,7 @@ VLAD_EXTERN int kb_query_generate(void *a_kb, void *a_exp, FILE *a_fs)
 }
 
 /* prepares the kb for queries */
-VLAD_EXTERN int kb_compute_evaluate(void *a_kb)
+VLAD_EXTERN int vlad_kb_compute_evaluate(void *a_kb)
 {
 #ifdef SMODELS
   kb *tmp_kb = NULL;
@@ -251,13 +260,13 @@ VLAD_EXTERN int kb_compute_evaluate(void *a_kb)
   return tmp_kb->compute_evaluate();
 #else
   return VLAD_FAILURE;
-#endif 
+#endif
 }
 
 /* use smwrap class to evaluate a query */
-VLAD_EXTERN int kb_query_evaluate(void *a_kb,
-                                  void *a_exp,
-                                  unsigned char *a_res)
+VLAD_EXTERN int vlad_kb_query_evaluate(void *a_kb,
+                                       void *a_exp,
+                                       unsigned char *a_res)
 {
 #ifdef SMODELS
   kb *tmp_kb = NULL;
@@ -278,7 +287,7 @@ VLAD_EXTERN int kb_query_evaluate(void *a_kb,
 }
 
 /* create a stringlist */
-VLAD_EXTERN int strlist_create(void **a_slist)
+VLAD_EXTERN int vlad_strlist_create(void **a_slist)
 {
   stringlist *tmp_slist = NULL;
 
@@ -294,7 +303,7 @@ VLAD_EXTERN int strlist_create(void **a_slist)
 }
 
 /* destroy a stringlist */
-VLAD_EXTERN int strlist_destroy(void *a_slist)
+VLAD_EXTERN int vlad_strlist_destroy(void *a_slist)
 {
   stringlist *tmp_slist = NULL;
 
@@ -310,7 +319,7 @@ VLAD_EXTERN int strlist_destroy(void *a_slist)
 }
 
 /* add a string into stringlist */
-VLAD_EXTERN int strlist_add(void *a_slist, const char *a_s)
+VLAD_EXTERN int vlad_strlist_add(void *a_slist, const char *a_s)
 {
   stringlist *tmp_slist = NULL;
 
@@ -324,7 +333,7 @@ VLAD_EXTERN int strlist_add(void *a_slist, const char *a_s)
 }
 
 /* create an atom */
-VLAD_EXTERN int atom_create(void **a_atm)
+VLAD_EXTERN int vlad_atom_create(void **a_atm)
 {
   atom *tmp_atm = NULL;
 
@@ -340,7 +349,7 @@ VLAD_EXTERN int atom_create(void **a_atm)
 }
 
 /* destroy an atom */
-VLAD_EXTERN int atom_destroy(void *a_atm)
+VLAD_EXTERN int vlad_atom_destroy(void *a_atm)
 {
   atom *tmp_atm = NULL;
 
@@ -356,11 +365,11 @@ VLAD_EXTERN int atom_destroy(void *a_atm)
 }
 
 /* initialise atoms */
-VLAD_EXTERN int atom_init_holds(void *a_atm,
-                                const char *a_s,
-                                const char *a_a,
-                                const char *a_o,
-                                int a_t)
+VLAD_EXTERN int vlad_atom_init_holds(void *a_atm,
+                                     const char *a_s,
+                                     const char *a_a,
+                                     const char *a_o,
+                                     int a_t)
 {
   atom *tmp_atm = NULL;
 
@@ -373,10 +382,10 @@ VLAD_EXTERN int atom_init_holds(void *a_atm,
   return tmp_atm->init_holds(a_s, a_a, a_o, (bool) a_t);
 }
 
-VLAD_EXTERN int atom_init_member(void *a_atm,
-                                 const char *a_e,
-                                 const char *a_g,
-                                 int a_t)
+VLAD_EXTERN int vlad_atom_init_member(void *a_atm,
+                                      const char *a_e,
+                                      const char *a_g,
+                                      int a_t)
 {
   atom *tmp_atm = NULL;
 
@@ -389,10 +398,10 @@ VLAD_EXTERN int atom_init_member(void *a_atm,
   return tmp_atm->init_member(a_e, a_g, (bool) a_t);
 }
 
-VLAD_EXTERN int atom_init_subset(void *a_atm,
-                                 const char *a_g1,
-                                 const char *a_g2,
-                                 int a_t)
+VLAD_EXTERN int vlad_atom_init_subset(void *a_atm,
+                                      const char *a_g1,
+                                      const char *a_g2,
+                                      int a_t)
 {
   atom *tmp_atm = NULL;
 
@@ -406,7 +415,7 @@ VLAD_EXTERN int atom_init_subset(void *a_atm,
 }
 
 /* create an expression */
-VLAD_EXTERN int exp_create(void **a_exp)
+VLAD_EXTERN int vlad_exp_create(void **a_exp)
 {
   expression *tmp_exp = NULL;
 
@@ -422,7 +431,7 @@ VLAD_EXTERN int exp_create(void **a_exp)
 }
 
 /* destroy an expression */
-VLAD_EXTERN int exp_destroy(void *a_exp)
+VLAD_EXTERN int vlad_exp_destroy(void *a_exp)
 {
   expression *tmp_exp = NULL;
 
@@ -438,7 +447,7 @@ VLAD_EXTERN int exp_destroy(void *a_exp)
 }
 
 /* add an atom into expression */
-VLAD_EXTERN int exp_add(void *a_exp, void *a_atm)
+VLAD_EXTERN int vlad_exp_add(void *a_exp, void *a_atm)
 {
   expression *tmp_exp = NULL;
   atom *tmp_atm = NULL;
@@ -454,8 +463,29 @@ VLAD_EXTERN int exp_add(void *a_exp, void *a_atm)
   return tmp_exp->add(tmp_atm);
 }
 
+/* gives the i'th atom */
+VLAD_EXTERN int vlad_exp_get(void *a_exp, unsigned int a_i, void **a_atm)
+{
+  int retval;
+  expression *tmp_exp = NULL;
+  atom *tmp_atom;
+
+  if (a_exp == NULL || a_atm == NULL)
+    return VLAD_NULLPTR;
+
+  if ((tmp_exp = static_cast<expression *>(a_exp)) == NULL)
+    return VLAD_INVALIDINPUT;
+
+  if ((retval = tmp_exp->get(a_i, &tmp_atom)) != VLAD_OK)
+    return retval;
+
+  *a_atm = (void *) tmp_atom;
+
+  return VLAD_OK;
+}
+
 /* create a trans ref */
-VLAD_EXTERN int tref_create(void **a_tref)
+VLAD_EXTERN int vlad_tref_create(void **a_tref)
 {
   transref *tmp_tref = NULL;
 
@@ -471,7 +501,7 @@ VLAD_EXTERN int tref_create(void **a_tref)
 }
 
 /* destroy a tran sref */
-VLAD_EXTERN int tref_destroy(void *a_tref)
+VLAD_EXTERN int vlad_tref_destroy(void *a_tref)
 {
   transref *tmp_tref = NULL;
 
@@ -487,7 +517,7 @@ VLAD_EXTERN int tref_destroy(void *a_tref)
 }
 
 /* initialise a trans ref */
-VLAD_EXTERN int tref_init(void *a_tref, const char *a_n, void *a_slist)
+VLAD_EXTERN int vlad_tref_init(void *a_tref, const char *a_n, void *a_slist)
 {
   transref *tmp_tref = NULL;
   stringlist *tmp_slist = NULL;
@@ -501,4 +531,18 @@ VLAD_EXTERN int tref_init(void *a_tref, const char *a_n, void *a_slist)
   tmp_slist = static_cast<stringlist *>(a_slist);
 
   return tmp_tref->init(a_n, tmp_slist);
+}
+
+/* get the length of the list */
+VLAD_EXTERN int vlad_list_length(void *a_list)
+{
+  list *tmp_list;
+
+  if (a_list == NULL)
+    return 0;
+
+  if ((tmp_list = static_cast<list *>(a_list)) == NULL)
+    return 0;
+
+  return tmp_list->length();
 }
