@@ -15,80 +15,92 @@
 #endif
 
 /* create a kb */
-VLAD_EXTERN int kb_create(void **a_kb);
+VLAD_EXTERN int vlad_kb_create(void **a_kb);
 /* destroy a kb */
-VLAD_EXTERN int kb_destroy(void *a_kb);
+VLAD_EXTERN int vlad_kb_destroy(void *a_kb);
 /* (re)init a kb */
-VLAD_EXTERN int kb_init(void *a_kb);
+VLAD_EXTERN int vlad_kb_init(void *a_kb);
 /* close symbol table */
-VLAD_EXTERN int kb_close_symtab(void *a_kb);
+VLAD_EXTERN int vlad_kb_close_symtab(void *a_kb);
 /* close kb table */
-VLAD_EXTERN int kb_close_kb(void *a_kb);
+VLAD_EXTERN int vlad_kb_close_kb(void *a_kb);
 /* register an identifier in the kb */
-VLAD_EXTERN int kb_add_symtab(void *a_kb, const char *a_n, unsigned char a_t);
+VLAD_EXTERN int vlad_kb_add_symtab(void *a_kb,
+                                   const char *a_n,
+                                   unsigned char a_t);
 /* add an atom into the initial state table */
-VLAD_EXTERN int kb_add_inittab(void *a_kb, void *a_atm);
+VLAD_EXTERN int vlad_kb_add_inittab(void *a_kb, void *a_atm);
 /* add an expression into the constraints table */
-VLAD_EXTERN int kb_add_consttab(void *a_kb, void *a_e, void *a_c, void *a_n);
+VLAD_EXTERN int vlad_kb_add_consttab(void *a_kb,
+                                     void *a_e,
+                                     void *a_c,
+                                     void *a_n);
 /* add a transformation declaration in the trans table */
-VLAD_EXTERN int kb_add_transtab(void *a_kb, const char *a_n, void *a_v, void *a_pr, void *a_po);
+VLAD_EXTERN int vlad_kb_add_transtab(void *a_kb,
+                                     const char *a_n,
+                                     void *a_v,
+                                     void *a_pr,
+                                     void *a_po);
 /* add a transformation reference to the sequence table */
-VLAD_EXTERN int kb_add_seqtab(void *a_kb, void *a_tr);
+VLAD_EXTERN int vlad_kb_add_seqtab(void *a_kb, void *a_tr);
 /* delete a transformation reference from the sequence table */
-VLAD_EXTERN int kb_del_seqtab(void *a_kb, unsigned int a_i);
+VLAD_EXTERN int vlad_kb_del_seqtab(void *a_kb, unsigned int a_i);
 /* enumerate the sequences in the sequence table, output to f */
-VLAD_EXTERN int kb_list_seqtab(void *a_kb, FILE *a_fs);
+VLAD_EXTERN int vlad_kb_list_seqtab(void *a_kb, FILE *a_fs);
 /* generate the rules necessary to evaluate queries */
-VLAD_EXTERN int kb_compute_generate(void *a_kb, FILE *a_fs);
+VLAD_EXTERN int vlad_kb_compute_generate(void *a_kb, FILE *a_fs);
 /* generate the query */
-VLAD_EXTERN int kb_query_generate(void *a_kb, void *a_exp, FILE *a_fs);
-#ifdef SMODELS
+VLAD_EXTERN int vlad_kb_query_generate(void *a_kb, void *a_exp, FILE *a_fs);
 /* prepares the kb for queries */
-VLAD_EXTERN int kb_compute_evaluate(void *a_kb);
+VLAD_EXTERN int vlad_kb_compute_evaluate(void *a_kb);
 /* use smwrap class to evaluate a query */
-VLAD_EXTERN int kb_query_evaluate(void *a_kb,
-                                  void *a_exp,
-                                  unsigned char *a_res);
-#endif
+VLAD_EXTERN int vlad_kb_query_evaluate(void *a_kb,
+                                       void *a_exp,
+                                       unsigned char *a_res);
 
 /* create a stringlist */
-VLAD_EXTERN int strlist_create(void **a_slist);
+VLAD_EXTERN int vlad_strlist_create(void **a_slist);
 /* destroy a stringlist */
-VLAD_EXTERN int strlist_destroy(void *a_slist);
+VLAD_EXTERN int vlad_strlist_destroy(void *a_slist);
 /* add a string into stringlist */
-VLAD_EXTERN int strlist_add(void *a_slist, const char *a_s);
+VLAD_EXTERN int vlad_strlist_add(void *a_slist, const char *a_s);
 
 /* create an atom */
-VLAD_EXTERN int atom_create(void **a_atm);
+VLAD_EXTERN int vlad_atom_create(void **a_atm);
 /* destroy an atom */
-VLAD_EXTERN int atom_destroy(void *a_atm);
+VLAD_EXTERN int vlad_atom_destroy(void *a_atm);
 /* initialise atoms */
-VLAD_EXTERN int atom_init_holds(void *a_atm,
-                                const char *a_s,
-                                const char *a_a,
-                                const char *a_o,
-                                int a_t);
-VLAD_EXTERN int atom_init_member(void *a_atm,
-                                 const char *a_e,
-                                 const char *a_g,
-                                 int a_t);
-VLAD_EXTERN int atom_init_subset(void *a_atm,
-                                 const char *a_g1,
-                                 const char *a_g2,
-                                 int a_t);
+VLAD_EXTERN int vlad_atom_init_holds(void *a_atm,
+                                     const char *a_s,
+                                     const char *a_a,
+                                     const char *a_o,
+                                     int a_t);
+VLAD_EXTERN int vlad_atom_init_member(void *a_atm,
+                                      const char *a_e,
+                                      const char *a_g,
+                                      int a_t);
+VLAD_EXTERN int vlad_atom_init_subset(void *a_atm,
+                                      const char *a_g1,
+                                      const char *a_g2,
+                                      int a_t);
 
 /* create an expression */
-VLAD_EXTERN int exp_create(void **a_exp);
+VLAD_EXTERN int vlad_exp_create(void **a_exp);
 /* destroy an expression */
-VLAD_EXTERN int exp_destroy(void *a_exp);
+VLAD_EXTERN int vlad_exp_destroy(void *a_exp);
 /* add an atom into expression */
-VLAD_EXTERN int exp_add(void *a_exp, void *a_atm);
+VLAD_EXTERN int vlad_exp_add(void *a_exp, void *a_atm);
+/* gives the i'th atom */
+VLAD_EXTERN int vlad_exp_get(void *a_exp, unsigned int a_i, void **a_atm);
 
 /* create a trans ref */
-VLAD_EXTERN int tref_create(void **a_tref);
+VLAD_EXTERN int vlad_tref_create(void **a_tref);
 /* destroy a tran sref */
-VLAD_EXTERN int tref_destroy(void *a_tref);
+VLAD_EXTERN int vlad_tref_destroy(void *a_tref);
 /* initialise a trans ref */
-VLAD_EXTERN int tref_init(void *a_tref, const char *a_n, void *a_slist);
+VLAD_EXTERN int vlad_tref_init(void *a_tref, const char *a_n, void *a_slist);
+
+/* get the length of the list */
+VLAD_EXTERN int vlad_list_length(void *a_list);
 
 #endif
